- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.12.3
 
- 
        
 - 
        2950ab9
 
Following is printed to debug output when opening the sub menu under M2 menu in the example application:
qt.qpa.wayland: Non-toplevel surfaces can't request window states qt.qpa.wayland: setGrabPopup called with a parent, QtWaylandClient::QWaylandXdgSurface(0x21ab8e0) which does not match the current topmost grabbing popup, QtWaylandClient::QWaylandXdgSurface(0x221ba30) According to the xdg-shell protocol, this is not allowed. The wayland QPA plugin is currently handling it by setting the parent to the topmost grabbing popup. Note, however, that this may cause positioning errors and popups closing unxpectedly because xdg-shell mandate that child popups close before parents qt.qpa.wayland: Non-toplevel surfaces can't request window states
- relates to
 - 
                    
QTBUG-68636 Some popups (i.e.) menus are misplaced on gnome-shell
-         
 - Closed
 
 -