Client: Don't spam stderr about ignored window states

Since it is not supported by the protocol, neither we, nor the
application developer can do anything about it.

Change it from warning to debug so it only shows up when enabled.

Task-number: QTBUG-76061
Change-Id: I81420e0c72a9e9652f6592d65c70c7df1e5725b9
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
Reviewed-by: Pier Luigi Fiorini <pierluigi.fiorini@liri.io>